Removed connect and live reload from gulp.

--- a/css/style.css
+++ b/css/style.css
@@ -740,5 +740,9 @@ a img.aligncenter {
     page-break-after: avoid;
   }
 }
+/* line 9, ../sass/style.scss */
+body {
+  background-color: pink;
+}
 
 /*# sourceMappingURL=style.css.map */
