Wording and link changes

--- a/src/css/banner.css
+++ b/src/css/banner.css
@@ -1,10 +1,10 @@
 /*!
  * Theme Name: HTML5 Blank
  * Theme URI: http://html5blank.com
- * Description: HTML5 Blank WordPress Theme
+ * Description: HTML5 Blank WordPress Starter Theme
  * Version: 1.5.0
- * Author: Todd Motto (@toddmotto)
- * Author URI: http://toddmotto.com
+ * Author: Robert DeVore)
+ * Author URI: http://robertdevore.com
  * Tags: Blank, HTML5, CSS3
  *
  * License: MIT
