--- a/src/css/sass/partials/reset.scss
+++ b/src/css/sass/partials/reset.scss
@@ -59,3 +59,29 @@ input[type="search"] {
   color: $body-bg;
   text-shadow: none;
 }
+
+
+h1, h2, h3, h4, h5, h6{
+  font-weight: normal;
+}
+
+.gform_ajax_spinner {
+  margin-left: 20px;        /* give it some space from the Submit button */
+  border: 4px solid rgba(255, 255, 255, 0.3); /* match with border-left */
+  border-left: 4px solid $blue;
+  animation: spinner 1.1s infinite linear;
+  border-radius: 50%;
+  width: 30px;          /* match with height for a circle */
+  height: 30px;
+  margin: 4rem auto 0 auto;
+  display: block;
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
